--- a/app/src/main/res/drawable/rounded_container.xml
+++ b/app/src/main/res/drawable/rounded_container.xml
@@ -3,7 +3,7 @@
     android:shape="rectangle">
 
     <solid
-        android:color="#E5E4E2"/>
+        android:color="#F7F5F2"/>
 
     <corners android:radius="10dp"/>
 </shape>
