--- a/app/src/main/res/layout/service_item.xml
+++ b/app/src/main/res/layout/service_item.xml
@@ -3,30 +3,32 @@
     android:orientation="vertical"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:padding="5dp">
+    android:padding="3dp">
 
     <LinearLayout
         android:id="@+id/service_item"
+        android:padding="5dp"
         android:layout_width="80dp"
-        android:layout_height="100dp"
+        android:layout_height="80dp"
         android:contextClickable="true"
         android:background="@drawable/rounded_container"
         android:gravity="center"
-        android:orientation="vertical"
-        >
+        android:orientation="vertical">
+
         <ImageView
             android:id="@+id/service_item_Image"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:layout_marginBottom="5dp"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
             android:src="@drawable/ic_icn_hizmet_garanti_orange"/>
         <TextView
             android:id="@+id/service_item_text"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="10dp"
             android:textAlignment="center"
-            android:text="deneme"
+            android:layout_marginTop="5dp"
+            android:textStyle="bold"
+            android:textColor="#000000"
+            android:text="Sağlık"
             />
     </LinearLayout>
 
