--- a/app/src/main/res/layout/posts_layout_adapter.xml
+++ b/app/src/main/res/layout/posts_layout_adapter.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="200dp"
-    android:layout_height="350dp"
+    android:layout_width="150dp"
+    android:layout_height="180dp"
     android:elevation="10dp">
 
     <LinearLayout
@@ -11,25 +11,44 @@
         android:background="#ffffff"
         android:gravity="center"
         android:orientation="vertical"
-        android:paddingLeft="10dp"
-        android:paddingRight="10dp">
+        android:layout_marginHorizontal="5dp">
 
         <ImageView
             android:id="@+id/itemImg"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="0dp"
+            android:scaleType="fitXY"
             android:src="@drawable/ic_launcher_background" />
-
-        <TextView
-            android:id="@+id/itemName"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:gravity="left"
-            android:text="name"
-            android:textSize="14sp"
-            android:textStyle="bold" />
-
-
     </LinearLayout>
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom"
+        android:elevation="10dp">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+            <TextView
+                android:id="@+id/itemCategoryName"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="EV HIZMETLERÄ°"
+                android:gravity="start"
+                android:layout_marginHorizontal="10dp"
+                android:textSize="14sp"
+                android:textStyle="bold" />
+            <TextView
+                android:id="@+id/itemName"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="sdfsdfs  fsfsdf sdfs sdfsdf sdfsdfsdf "
+                android:gravity="start"
+                android:layout_marginHorizontal="10dp"
+                android:textSize="14sp"
+                android:textStyle="bold" />
+        </LinearLayout>
+
+    </RelativeLayout>
 </androidx.cardview.widget.CardView>
