--- a/app/src/main/res/layout/service_layout_adapter.xml
+++ b/app/src/main/res/layout/service_layout_adapter.xml
@@ -2,36 +2,37 @@
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="150dp"
-    android:layout_height="250dp"
-    android:elevation="10dp"
-    android:layout_margin="5dp"
-    app:cardCornerRadius="10dp">
+    android:layout_width="80dp"
+    android:layout_height="80dp"
+    app:cardCornerRadius="5dp"
+    app:cardBackgroundColor="@color/white"
+    app:cardPreventCornerOverlap="true"
+    app:cardUseCompatPadding="true">
 
     <LinearLayout
         android:id="@+id/layout_id"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:background="#f8f8f8"
         android:gravity="center"
-        android:orientation="vertical"
-        android:paddingLeft="10dp"
-        android:paddingRight="10dp">
+        android:orientation="vertical">
 
         <ImageView
-            android:id="@+id/itemImg"
-            android:layout_width="70dp"
-            android:layout_height="105dp"
-            android:src="@drawable/ic_launcher_background" />
-
+            android:id="@+id/service_item_Image"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:src="@drawable/ic_icn_hizmet_garanti_orange"/>
         <TextView
-            android:id="@+id/itemName"
+            android:id="@+id/service_item_text"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:gravity="center"
-            android:text="name"
-            android:textSize="14sp"
-            android:textStyle="bold" />
+            android:textAlignment="center"
+            android:layout_marginTop="5dp"
+            android:textStyle="bold"
+            android:textColor="#000000"
+            android:text="Sağlık"
+            />
 
     </LinearLayout>
+
 </androidx.cardview.widget.CardView>
