--- a/app/src/main/res/layout/posts_layout_adapter.xml
+++ b/app/src/main/res/layout/posts_layout_adapter.xml
@@ -34,16 +34,18 @@
                 android:id="@+id/itemCategoryName"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="EV HIZMETLERÄ°"
+                android:text="EV HIZMETLERİ"
+                android:textColor="@color/white"
                 android:gravity="start"
                 android:layout_marginHorizontal="10dp"
-                android:textSize="14sp"
+                android:textSize="13sp"
                 android:textStyle="bold" />
             <TextView
                 android:id="@+id/itemName"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="sdfsdfs  fsfsdf sdfs sdfsdf sdfsdfsdf "
+                android:text="Açıklama"
+                android:textColor="@color/white"
                 android:gravity="start"
                 android:layout_marginHorizontal="10dp"
                 android:textSize="14sp"
