--- a/app/src/main/res/layout/popular_layout_adapter.xml
+++ b/app/src/main/res/layout/popular_layout_adapter.xml
@@ -29,6 +29,7 @@
             android:layout_height="wrap_content"
             android:gravity="left"
             android:text="name"
+            android:textColor="@color/black"
             android:textSize="14sp"
             android:textStyle="bold" />
 
