--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -5,14 +5,13 @@
     android:layout_height="match_parent">
 
     <ImageView
-        android:id="@+id/img"
+        android:id="@+id/img_item"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-
         android:adjustViewBounds="true"
         android:padding="5dp"
-        android:src="@drawable/test"></ImageView>
+        android:src="@drawable/test" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -33,14 +32,14 @@
             </ImageView>
 
             <TextView
-                android:id="@+id/pros"
+                android:id="@+id/pros_item"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:gravity="center_vertical"
                 android:paddingLeft="10dp"
                 android:text="3.758 pros near you"
                 android:textSize="12sp"
-                android:textStyle="bold"></TextView>
+                android:textStyle="bold" />
         </LinearLayout>
         <LinearLayout
             android:layout_width="match_parent"
@@ -55,7 +54,7 @@
                 android:src="@drawable/ic_icn_star_average">
             </ImageView>
             <TextView
-                android:id="@+id/avg"
+                android:id="@+id/avg_item"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:textSize="12sp"
@@ -78,7 +77,7 @@
                 android:src="@drawable/ic_icn_job_done_orange">
             </ImageView>
             <TextView
-                android:id="@+id/job"
+                android:id="@+id/job_item"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:textSize="12sp"
