--- a/app/src/main/res/layout/activity_scrolling.xml
+++ b/app/src/main/res/layout/activity_scrolling.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context=".ScrollingActivity">
+    tools:context=".ui.ScrollingActivity">
 
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/app_bar"
@@ -55,20 +55,14 @@
                     android:layout_marginTop="20dp"
                     android:layout_marginEnd="20dp"
                     android:background="@drawable/rounded_searchbar"
-                    android:commitIcon="@drawable/ic_searchs"
-                    android:icon="@drawable/ic_searchs"
                     android:iconifiedByDefault="false"
                     android:padding="4dp"
                     android:queryHint="Which service do you need?"
-                    android:searchHintIcon="@drawable/ic_searchs"
-                    android:searchIcon="@drawable/ic_searchs"
+                    android:searchIcon="@drawable/search"
                     android:theme="@style/ThemeOverlay.SearchView"
-                    app:closeIcon="@drawable/ic_searchs"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/linearLayout"
-                    app:searchHintIcon="@drawable/ic_searchs"
-                    app:searchIcon="@drawable/ic_searchs">
+                    app:layout_constraintTop_toBottomOf="@+id/linearLayout">
 
                 </SearchView>
             </LinearLayout>
